--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,5 +2,5 @@ spring:
   data:
     mongodb:
       password: ${MONGOPASSWORD}
-      username: ${MONGO_USERNAME}
-      uri: ${MONGOUSER}
+      username: ${MONGOUSER}
+      uri: ${MONGO_URL}
