refactor : cors 설정을 위한 준비

--- a/src/main/resources/application-railway.yml
+++ b/src/main/resources/application-railway.yml
@@ -6,3 +6,12 @@ spring:
         options:
           model: gpt-4o
           stream-usage: true
+# Railway-specific settings
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
+  endpoint:
+    health:
+      show-details: always
