refactor : cors 설정을 위한 준비

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 spring:
   profiles:
     include: railway
-    active: prod
+    active: prod,railway
 
 server:
-  port: 8080
+  port: ${PORT:8080}
 
 #logging:
 #  level:
