--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -3,4 +3,4 @@ spring:
     mongodb:
       password: bRwHvkHyOQqWMpRaDgmqfhFomOVdFWDu
       username: mongo
-      uri: mongodb://mongo:bRwHvkHyOQqWMpRaDgmqfhFomOVdFWDu@mongodb.railway.internal:27017/mydatabase
+      uri: mongodb://mongo:bRwHvkHyOQqWMpRaDgmqfhFomOVdFWDu@yamanote.proxy.rlwy.net:53189
