refactor : 데이터베이스 이름 추가

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -3,4 +3,4 @@ spring:
     mongodb:
       password: bRwHvkHyOQqWMpRaDgmqfhFomOVdFWDu
       username: mongo
-      uri: mongodb://mongo:bRwHvkHyOQqWMpRaDgmqfhFomOVdFWDu@yamanote.proxy.rlwy.net:53189
+      uri: mongodb://mongo:bRwHvkHyOQqWMpRaDgmqfhFomOVdFWDu@yamanote.proxy.rlwy.net:53189/mydatabase
