refactor : 데이터베이스 이름 추가

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,6 +1,4 @@
 spring:
   data:
     mongodb:
-      password: bRwHvkHyOQqWMpRaDgmqfhFomOVdFWDu
-      username: mongo
-      uri: mongodb://mongo:bRwHvkHyOQqWMpRaDgmqfhFomOVdFWDu@yamanote.proxy.rlwy.net:53189/mydatabase
+      uri: mongodb://mongo:bRwHvkHyOQqWMpRaDgmqfhFomOVdFWDu@mongodb.railway.internal:27017/mydatabase?authSource=admin
