refactor : railway 프록시를 위한 ws 관련 설정

--- a/src/main/resources/application-railway.yml
+++ b/src/main/resources/application-railway.yml
@@ -6,6 +6,15 @@ spring:
         options:
           model: gpt-4o
           stream-usage: true
+
+server:
+  port: ${PORT:8080}
+  error:
+    include-stacktrace: never
+    include-message: always
+  # Railway 환경에서 WebSocket 지원
+  forward-headers-strategy: framework
+
 # Railway-specific settings
 management:
   endpoints:
